Refactor resume template and helpers
- Updated the main rendering logic in index.js to use handlebars-wax for partials management.
- Added new Handlebars helpers for formatting addresses, dates, and other utilities.
- Removed unused partials (awards, basics, education, interests, languages, publications, references, skills, volunteer, work) to streamline the template.
- Introduced new partials (item-details, item-header, item, header, left-part, right-part, full) for better organization and modularity.
- Enhanced the CSS for improved styling and responsiveness.
- Added a new script for generating PDFs using Puppeteer.
- Updated package.json with new dependencies and scripts for serving and exporting the resume.
- Created a sample resume_example.json for testing purposes.

--- a/resume.hbs
+++ b/resume.hbs
@@ -1,10 +1,8 @@
 <!doctype html>
 <html>
-	<head>
-	
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimal-ui">
-	
 	<title>{{#resume.basics}}{{name}}{{/resume.basics}}</title>
 
 	<style>
@@ -13,17 +11,13 @@
 	
 	</head>
 	<body>
-	
-	<div id="resume">
-		{{> basics }}
-		{{> work }}
-		{{> volunteer }}
-		{{> education }}
-		{{> awards }}
-		{{> publications }}
-		{{> skills }}
-		{{> languages }}
-		{{> interests }}
-		{{> references }}
+	  	<!-- BUTTON only visible on screen -->
+		<button id="export-pdf" class="no-print" style="position:fixed;top:10px;right:10px;z-index:1000;">
+		Export as PDF
+		</button>
+		<div id="resume">
+			{{> full }}
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  		<script src="/export-pdf.js"></script>
 	</body>
 </html>
