--- a/views/left-part.hbs
+++ b/views/left-part.hbs
@@ -2,7 +2,7 @@
     <!-- LEFT SIDE -->
     <div class="resume-left">
         {{#if resume.basics.summary}}
-        <div class="summary">{{resume.basics.summary}}</div>
+        <div class="summary">{{pre resume.basics.summary}}</div>
         {{/if}}
 
         <div class="section">
