Refacto templates and helpers with new resume data structure; polish styles & config
- Refactor Handlebars helpers (index.js): normalize quotes/formatting, add moment.locale('fr'), add early returns and safer string handling for bullets/pre, tidy exports
- Update views to new data shape: use "name" and "list" subproperties to use different values based on languages
- Replace resume_example.json with a sample matching the updated template structure and fields
- Style adjustments (style.css): typography, spacing, responsive skill layout, minor visual tweaks
- Update package.json to use a custom version of resume-cli

--- a/views/left-part.hbs
+++ b/views/left-part.hbs
@@ -1,71 +1,65 @@
 <section id="left-part">
     <!-- LEFT SIDE -->
     <div class="resume-left">
-        {{#if resume.basics.summary}}
-        <div class="summary">{{pre resume.basics.summary}}</div>
-        {{/if}}
-
-        <div class="section">
-            <div class="section-divider"></div>
-            <h2>Contact</h2>
-            {{#if resume.basics.location.city}}
-            <div class="contact-item">
-                <i class="ri-home-4-line contact-icon" style="color:#4CAF50;"></i>
-                {{resume.basics.location.city}}
-            </div>
+        <div class="resume-left-container">
+            {{#if resume.basics.summary}}
+            <div class="summary">{{pre resume.basics.summary}}</div>
             {{/if}}
-            <div class="contact-item">
-                <i class="ri-mail-line contact-icon" style="color:#D44638;"></i>
-                {{resume.basics.email}}
+            {{!-- CONTACT --}}
+            <div class="section">
+                <div class="section-divider"></div>
+                <h2>{{ resume.basics.contact.name }}</h2>
+                {{#if resume.basics.contact.location.city}}
+                <div class="contact-item">
+                    <i class="ri-home-4-line contact-icon" style="color:#4CAF50;"></i>
+                    {{resume.basics.contact.location.city}}
+                </div>
+                {{/if}}
+                <div class="contact-item">
+                    <i class="ri-mail-line contact-icon" style="color:#D44638;"></i>
+                    {{resume.basics.contact.email}}
+                </div>
+                {{#if resume.basics.contact.profiles.[0].url}}
+                <div class="contact-item">
+                    <i class="ri-linkedin-box-line contact-icon" style="color:#0077B5;"></i>
+                    <a href="{{resume.basics.contact.profiles.[0].url}}" target="_blank">{{resume.basics.contact.profiles.[0].url}}</a>
+                </div>
+                {{/if}}
             </div>
-            {{#if resume.basics.profiles.[0].url}}
-            <div class="contact-item">
-                <i class="ri-linkedin-box-line contact-icon" style="color:#0077B5;"></i>
-                <a href="{{resume.basics.profiles.[0].url}}" target="_blank">{{resume.basics.profiles.[0].url}}</a>
-            </div>
-            {{/if}}
-        </div>
-
-        <div class="section-divider"></div>
-        {{> skills}}
-
-        <div class="section">
+            {{!-- SKILLS --}}
             <div class="section-divider"></div>
-            <h2>Langues</h2>
-            {{#each resume.languages}}
-            <div>
-                <b>{{name}}</b>{{#if value}} <span class="fdim">{{langFormat value}}</span>{{/if}}
-            </div>
-            {{/each}}
-        </div>
-
-        <div class="section">
-            <h2>Formations</h2>
-            {{#each resume.education}}
-            <div>
-                <b>{{studyType}}</b><br>
-                <span>{{institution}} - {{#if endDate}}{{formatYear endDate}}{{/if}}</span>
-            </div>
-            <br/>
-            {{/each}}
-        </div>
-
-        <div class="section">
+            {{> skills}}
+            {{!-- LANGUAGES --}}
             <div class="section-divider"></div>
-            <h2>Centres d'intérêt</h2>
-            {{#each resume.interests}}
-            <div>{{name}}</div>
-            {{/each}}
-        </div>
-        {{!--
-        <div class="section">
-            <h2>Compétences</h2>
-            <ul class="skills">
-                {{#each resume.skills}}
-                <li>{{name}}</li>
+            <div class="section">
+                <h2>{{ resume.languages.name }}</h2>
+                {{#each resume.languages.list}}
+                <div>
+                    <b>{{name}}</b>{{#if value}} <span class="fdim">{{langFormat value}}</span>{{/if}}
+                </div>
                 {{/each}}
-            </ul>
-        </div> --}}
+            </div>
+            {{!-- TRAINING --}}
+            <div class="section-divider"></div>
+            <div class="section">
+                <h2>{{ resume.training.name }}</h2>
+                <div class="skills-list">
+                {{#each resume.training.list}}
+                    <div>
+                        <b>{{studyType}}</b><br>
+                        <span>{{institution}} - {{#if endDate}}{{formatYear endDate}}{{/if}}</span>
+                    </div>
+                {{/each}}
+                </div>  
+            </div>
+            {{!-- INTERESTS --}}
+            <div class="section-divider"></div>
+            <div class="section">
+                <h2>{{ resume.interests.name }}</h2>
+                {{#each resume.interests.list}}
+                <div>{{name}}</div>
+                {{/each}}
+            </div>
+        </div>
     </div>
-
 </section>
