--- a/style.css
+++ b/style.css
@@ -1,23 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Lora:700|Open+Sans:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Lora:700|Open+Sans:400,700&display=swap");
 
 body {
   background: #f5f6fa;
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   margin: 0;
 }
 
 html {
-    font-size: 0.95em;
-    width: 100%;
-    height: 100%;
+  font-size: 0.95em;
+  width: 100%;
+  height: 100%;
 }
-
 
 .resume {
   max-width: 900px;
   /* margin: 40px auto; */
   background: #fff;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.07);
 }
 
 .header-bg {
@@ -46,7 +44,7 @@ html {
   border-radius: 50%;
   object-fit: scale-down;
   border: 2px solid #fff;
-  box-shadow: 0 3px 12px rgba(0,0,0,0.08);
+  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.08);
   position: absolute;
   right: 25%;
   background: linear-gradient(#e9e8e4, #d8d5cf);
@@ -54,7 +52,7 @@ html {
 }
 
 h1 {
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
   font-size: 2.4em;
   margin: 0;
   font-weight: 700;
@@ -63,7 +61,7 @@ h1 {
 }
 
 .subtitle {
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
   font-size: 1.5em;
   color: #427a77;
   align-self: end;
@@ -82,6 +80,9 @@ h1 {
   padding-top: 18px;
   min-width: 200px;
 }
+.resume-left-container {
+  width: 95%;
+}
 
 .resume-right {
   flex: 2.1;
@@ -95,21 +96,17 @@ h1 {
   font-size: 1em;
   margin-bottom: 18px;
   text-align: justify;
-  margin-right: 1em;
-}
-
-.section {
-  margin-bottom: 26px;
 }
 
 .section h2 {
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 1.05em;
   margin: 0 0 10px 0;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1px;
   color: #222;
+  text-transform: uppercase;
 }
 
 .section-divider {
@@ -124,7 +121,8 @@ h1 {
   margin-bottom: 16px;
 }
 
-.org, .date {
+.org,
+.date {
   color: #5c8a86;
   font-weight: 600;
 }
@@ -150,10 +148,6 @@ h1 {
   margin: 0;
 }
 
-.skills li {
-  margin-bottom: 7px;
-}
-
 .fdim {
   color: #888;
   font-size: 0.98em;
@@ -162,28 +156,29 @@ h1 {
 }
 
 .contact-item {
-    margin-bottom: 0.6em;
-    display: flex;
-    align-items: center;
-    gap: 0.4em;
+  margin-bottom: 0.6em;
+  display: flex;
+  align-items: center;
+  gap: 0.4em;
 }
 .contact-icon {
-    font-size: 1.3em;
+  font-size: 1.3em;
 }
 
 b {
-	opacity: 0.6;
+  opacity: 0.6;
 }
 
 @media print {
-		.no-print {
-		display: none !important;
-		}
+  .no-print {
+    display: none !important;
+  }
 }
 
 .skills-section-columns {
   display: flex;
   flex-direction: column;
+  gap: 1em;
 }
 
 .skills-category {
@@ -191,12 +186,13 @@ b {
 }
 
 .skills-category h3 {
-  font-size: 1.12em;
+  font-size: 0.85em;
   color: #223;
-  font-weight: 700;
+  font-weight: 600;
   letter-spacing: 0.01em;
   margin-top: 0;
   margin-bottom: 0.2em;
+  text-transform: uppercase;
 }
 
 .skills-list {
@@ -207,7 +203,7 @@ b {
 
 .skill-item {
   box-sizing: border-box;
-  width: 48%;    /* Two per row */
+  width: 100%;
   background: #f6f8fa;
   padding: 0.33em 0.7em;
   border-radius: 0.38em;
@@ -230,7 +226,7 @@ b {
     min-width: unset;
   }
   .skill-item {
-    width: 48%;  /* single column, full width */
+    width: 48%; /* single column, full width */
   }
 }
 
