--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -1,27 +1,15 @@
 <section id="skills">
+  {{#each resume.skills.list}}
   <div class="skills-section-columns">
     <!-- Langages/Frameworks -->
-    <div class="skills-category">
-      <h3>Langages/Frameworks</h3>
-      <div class="skills-list">
-        {{#each resume.skills}}
-          {{#if (eq category "languages")}}
+      <div class="skills-category">
+        <h3>{{category}}</h3>
+          <div class="skills-list">
+          {{#each list}}
             <div class="skill-item">{{name}}</div>
-          {{/if}}
-        {{/each}}
+          {{/each}}
+          </div>
       </div>
-    </div>
-
-    <!-- Outils -->
-    <div class="skills-category">
-      <h3>Outils</h3>
-      <div class="skills-list">
-        {{#each resume.skills}}
-          {{#if (eq category "tools")}}
-            <div class="skill-item">{{name}}</div>
-          {{/if}}
-        {{/each}}
-      </div>
-    </div>
+    {{/each}}
   </div>
 </section>
